--- a/.github/workflows/create_and_publish_releases.yml
+++ b/.github/workflows/create_and_publish_releases.yml
@@ -31,6 +31,7 @@ jobs:
         run: yarn install
 
       - name: Generate production build
+        shell: bash
         run: yarn build
 
       - name: Prefix version tag with "v"
