--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
   "homepage": "https://stackblitz.com/github/samdenty/console-feed?file=demo%2Fpublic%2Fiframe.html",
   "repository": {
     "type": "git",
-    "url": "https://github.com/samdenty/console-feed.git"
+    "url": "https://github.com/bigbinary/console-feed"
   },
   "bugs": {
     "url": "https://github.com/samdenty/console-feed/issues"
